<resources>
    <string name="app_name">Ambitus</string>
    <string name="icon_button">1</string>
    <string name="settings_button">1</string>
    <string name="battery_label">Battery Temperature:</string>
    <string name="temp_label">Temperature:</string>
    <string name="humidity_label">Humidity:</string>
    <string name="pressure_label">Air Pressure:</string>
    <string name="magnet_label_x">Magnetic Field X:</string>
    <string name="magnet_label_y">Magnetic Field Y:</string>
    <string name="magnet_label_z">Magnetic Field Z:</string>

    <string name="all_notifications_label">All notifications</string>
    <string name="reset_all_button">Reset all</string>

    <string name="battery_title">Battery Temperature</string>
    <string name="temp_title">Temperature</string>
    <string name="humidity_title">Humidity</string>
    <string name="pressure_title">Air Pressure</string>
    <string name="magnet_title">Magnetic Field</string>

    <string name="min_label">Min:</string>
    <string name="max_label">Max:</string>
    <string name="notifications_label">Notifications</string>
    <string name="reset_button">Reset</string>

    <string name="sensor_unavailable">Unavailable</string>
</resources>