<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/black"
        android:orientation="vertical"
        android:showDividers="middle"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/icon_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/icon_button" />

            <Space
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/settings_button"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/settings_button"
                app:srcCompat="@android:drawable/ic_menu_preferences" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/battery_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_label"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/temp_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_label"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_label"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/pressure_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_label"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/magnet_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magnet_label"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>
            </LinearLayout>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/battery_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/temp_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/humidity_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/pressure_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/magnet_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:paddingBottom="10dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>